infra/middleware/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:  
  - protocol: HTTP
    port: 80
    name: httpin
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTP
    port: 5341
    name: seqingestin
    allowedRoutes:
      namespaces:
        from: All
